--- a/Space_Missions_Analysis_(start).ipynb
+++ b/Space_Missions_Analysis_(start).ipynb
@@ -1314,8 +1314,7 @@
         "      countries.append(location[-count + 1:])\n",
         "      break\n",
         "    else:\n",
-        "      count += 1\n",
-        "print(countries)"
+        "      count += 1"
       ],
       "execution_count": 22,
       "outputs": [
